# image_recognition_with_convolutional_neural_network_AI

./: .gitignore  pyproject.toml
data/: targets.csv
src/image_recognition_with_convolutional_neural_network_ai/: Mlp.py  cnn.py  data_processing.py  main.py  predict.py
tests/: rename_images.py  test_kagglehub.py
