[project]
name = "image-recognition-with-convolutional-neural-network-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Gilmar Júnior",email = "gilmarjunioreis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "google-images-search (>=1.4.7,<2.0.0)",
    "icrawler (>=0.6.10,<0.7.0)"
]

[tool.poetry]
packages = [{include = "image_recognition_with_convolutional_neural_network_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
